Embedded Monolog into HandleExceptions class
HandleExceptions class will display exceptions if the $mode is in
'development' and will log them using Monolog if $mode is 'Production'.
$mode is located in config/global.vars.php

--- a/.htaccess
+++ b/.htaccess
@@ -3,6 +3,8 @@
 
 #Options -Indexes
 
+#Adjust default time zone
+SetEnv TZ America/Phoenix
 
 
 # We are re - writing the URLs that point to the files
